--- a/index.html
+++ b/index.html
@@ -4,21 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>KennyPhoto-Shoot</title>
+    <title>Document</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
 <body>
     <header>
         <nav>
-            <ur>
-                <li><a href="home.html"></a>Home</li>
-                <li><a href="Contact.html"></a>Contact</li>
-                <li><a href="Booking.html"></a>Booking</li>
-                <li><a href="Reviews.html"></a>Reviews</li>
-            </ur>
-        </nav>
+            <ul>
+                <li><a href="/home/alex/Desktop/cd/index.html">home</a></li>
+                <li><a href="gallery.html">Gallery-Shoots</a></li>
+                <li><a href="faqs.html">FAQs</a></li>
+            </ul>
+    </nav>
     </header>
+    <h1>KennyShoot</h1>
+    <div id="flex">
+        <P class="bold">Kenny being a dedicated photographer to his work, he has been able to
+            win several awards. This is Tasha. it is Kenny's first profesional
+            photo that he took in the year 2017. The client was sure to head home
+            satisfied the good work.<img class="edit"src="images/ASM_0322.jpg">
+        </P>
+        <P class="bold">
+            For such great pics like this of Tasha, you are required to book
+            for a chance to be scheduled. upon complition of booking, you will end up
+            leaving your conduct information. Kenny or his assistants will get back to you
+            so that necessary arrengements to vist the shoot site can be made.
+            Clients always have the priviledge of choosing sites for their photo-shootings.
+            this is Mzae and and his son. the photo shooting was done in our studio. their faces 
+            for sure can tell how great it must have been to be clients of Kenny.<img class="edit" src="images/mzae.jpg">
+            <img class="edit" src="images/photo-model-2-1.jpg"> 
+        </P>
+        <h3>Services Offered</h3>
+        <table class="two" >
+            
+            <tr>
+                <th>Service</th>
+                <th>Prices</th>
+            </tr>
+            <tr>
+                <td>photo-shoot</td>
+                <td>ksh. 100</td>
+            </tr>
+            <tr>
+                <td>photo Editing</td>
+                <td>ksh 200</td>
+            </tr>
+            <tr>
+                <td>Photo shop</td>
+                <td>ksh.300</td>
+            </tr>
+            <tr>
+                <td>Camera Holding</td>
+                <td>ksh. 500</td>
+            </tr>
+            <tr>
+                <td>Event Photographing</td>
+                <td>ksh. 10,000</td>
+
+            </tr>
+            <tr>
+                <td> Camera lease</td>
+                <td>ksh. 1500</td>
+            </tr>
+        </tableclass="mzae">
+    </div>
+
+    </p>
+    <div class="footer">
+        <p><a href="contacts.html">Contacts</a b></p>
+        <p><a href="faqs.html">FAQs</a></p>
+        <p><a href="aboutus.html">AboutUs</a></p>
+    </div>
     
 </body>
 </html>
