--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="/home/alex/Desktop/cd/index.html">home</a></li>
                 <li><a href="gallery.html">Gallery-Shoots</a></li>
-                <li><a href="faqs.html">FAQs</a></li>
+                <li><a>FAQs</a></li>
             </ul>
     </nav>
     </header>
@@ -22,7 +22,7 @@
         <P class="bold">Kenny being a dedicated photographer to his work, he has been able to
             win several awards. This is Tasha. it is Kenny's first profesional
             photo that he took in the year 2017. The client was sure to head home
-            satisfied the good work.<img class="edit"src="images/ASM_0322.jpg">
+            satisfied the good work.<br><img class="edit"src="images/ASM_0322.jpg" id="center">
         </P>
         <P class="bold">
             For such great pics like this of Tasha, you are required to book
@@ -71,9 +71,9 @@
 
     </p>
     <div class="footer">
-        <p><a href="contacts.html">Contacts</a b></p>
-        <p><a href="faqs.html">FAQs</a></p>
-        <p><a href="aboutus.html">AboutUs</a></p>
+        <p><a>Contacts</a b></p>
+        <p><a>FAQs</a></p>
+        <p><a>AboutUs</a></p>
     </div>
     
 </body>
