--- a/gallery.html
+++ b/gallery.html
@@ -17,30 +17,31 @@
             </ul>
     </nav>
     </header>
-    <image src="https://bit.ly/38jYqRh" height="200" width="300"></image>
-    <image src="./images/Kajal1_IT_1566120370267.webp" height="200" width="300"></image>    
+    <image src="https://bit.ly/38jYqRh" height="200" width="300"></image> 
+    <img src="https://bit.ly/2FVkPbp" height="200" width="300"></img>
+<img src="https://bit.ly/362Vp6n"height="200" width="300"></img>
+<img src="https://bit.ly/2u6t8OQ"height="200" width="300"></img>
+<img src="https://bit.ly/377v3kQ"height="200" width="300"></img>
+<img src="https://bit.ly/2NywXmK"height="200" width="300"></img>
+<img src="https://bit.ly/2Rqf8Y7"height="200" width="300"></img>
+<img src="https://bit.ly/2ubYbsM"height="200" width="300"></img>
+<img src="https://bit.ly/362Vp6n"height="200" width="300"></img> 
 <image src="./images/500px_blog_howto_produce_photoshoot_ideas-1.jpg" height="200" width="300"></image>
 <image src="./images/https-cdn.evbuc_.com-images-47303082-105485416057-1-original-623x400.jpg" height="200" width="300"></image> 
 <image src="photo-1548603031-06e6f28b2280.jpeg" height="200" width="300"></image>
 <image src="./images/photo-1548603024-e76ec82f39dd.jpeg" height="200" width="300"></image>
-<image src="./images/img_7e4a3509b9baf8c1cb91fab0d32a2b2b_1523844986876_processed_original.jpg" height="200" width="300"></image>
 <image src="./images/photo-1551963474-cc9e699de3b4.jpeg" height="200" width="300"></image>
 <image src="./images/photo-1551963696-8404c9c7b9ba.jpeg" height="200" width="300"></image>
-<img src="https://bit.ly/2FVkPbp"></img>
-<img src="https://bit.ly/362Vp6n"></img>
-<img src="https://bit.ly/2u6t8OQ"></img>
-<img src="https://bit.ly/377v3kQ"></img>
-<img src="https://bit.ly/2NywXmK"></img>
-<img src="https://bit.ly/2Rqf8Y7"></img>
-<img src="https://bit.ly/2ubYbsM"></img>
-<img src="https://bit.ly/362Vp6n"></img>
+
 
 
 
     <div class="footer">
-        <p><a>Contacts</a b></p>
-        <p><afaqs.html">FAQs</a></p>
-        <p><a>AboutUs</a></p>
+        <p><a href="#.contacts">Contacts</a></p>
+        <p><a href="#.Faqs">FAQs</a></p>
+        <p><a href="#.aboutus">AboutUs</a></p>
+        <p><a href="#.services">Services</a></p>
+        <p><a href="#.reviews">Reviews</a></p>
     </div>
     
 </body>
