odification to gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/home/alex/Desktop/cd/index.html">home</a></li>
+                <li><a href="https://ow-tech.github.io/KennyPhotoshoot-webpage/">home</a></li>
                 <li><a href="gallery.html">Gallery-Shoots</a></li>
                 <li><a>FAQs</a></li>
             </ul>
