--- a/gallery.html
+++ b/gallery.html
@@ -11,30 +11,33 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">home</a></li>
-                <li><a href="gallery.html">Gallery-Shoots</a></li>
+                <li><a href="https://ow-tech.github.io/KennyPhotoshoot-webpage/">Home</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a>FAQs</a></li>
             </ul>
-    </nav>
+        </nav>
     </header>
-    <image src="https://bit.ly/38jYqRh" height="200" width="300"></image> 
-    <img src="https://bit.ly/2FVkPbp" height="200" width="300"></img>
-<img src="https://bit.ly/362Vp6n"height="200" width="300"></img>
-<img src="https://bit.ly/2u6t8OQ"height="200" width="300"></img>
-<img src="https://bit.ly/377v3kQ"height="200" width="300"></img>
-<img src="https://bit.ly/2NywXmK"height="200" width="300"></img>
-<img src="https://bit.ly/2Rqf8Y7"height="200" width="300"></img>
-<img src="https://bit.ly/2ubYbsM"height="200" width="300"></img>
-<img src="https://bit.ly/362Vp6n"height="200" width="300"></img> 
-<image src="./images/500px_blog_howto_produce_photoshoot_ideas-1.jpg" height="200" width="300"></image>
-<image src="./images/https-cdn.evbuc_.com-images-47303082-105485416057-1-original-623x400.jpg" height="200" width="300"></image> 
-<image src="photo-1548603031-06e6f28b2280.jpeg" height="200" width="300"></image>
-<image src="./images/photo-1548603024-e76ec82f39dd.jpeg" height="200" width="300"></image>
-<image src="./images/photo-1551963474-cc9e699de3b4.jpeg" height="200" width="300"></image>
-<image src="./images/photo-1551963696-8404c9c7b9ba.jpeg" height="200" width="300"></image>
 
 
+    <div class="image">
 
+      <image src="https://bit.ly/38jYqRh" height="200" width="300"></image> 
+      <img src="https://bit.ly/2FVkPbp" height="200" width="300"></img>
+      <img src="https://bit.ly/362Vp6n"height="200" width="300"></img>
+      <img src="https://bit.ly/2u6t8OQ"height="200" width="300"></img>
+      <img src="https://bit.ly/377v3kQ"height="200" width="300"></img>
+      <img src="https://bit.ly/2NywXmK"height="200" width="300"></img>
+      <img src="https://bit.ly/2Rqf8Y7"height="200" width="300"></img>
+      <img src="https://bit.ly/2ubYbsM"height="200" width="300"></img>
+      <img src="https://bit.ly/362Vp6n"height="200" width="300"></img> 
+      <image src="./images/500px_blog_howto_produce_photoshoot_ideas-1.jpg" height="200" width="300"></image>
+      <image src="./images/https-cdn.evbuc_.com-images-47303082-105485416057-1-original-623x400.jpg" height="200" width="300"></image> 
+      <image src="./images/photo-1548603031-06e6f28b2280.jpeg" height="200" width="300"></image>
+      <image src="./images/photo-1548603024-e76ec82f39dd.jpeg" height="200" width="300"></image>
+      <image src="./images/photo-1551963474-cc9e699de3b4.jpeg" height="200" width="300"></image>
+      <image src="./images/photo-1551963696-8404c9c7b9ba.jpeg" height="200" width="300"></image>
+
+    </div>
 
     <div class="footer">
         <p><a href="#.contacts">Contacts</a></p>
